# sdp

./: .gitignore  README.MD  discrimination.ipynb  projet.py  pyproject.toml
entities/: __init__.py  problem_data.py
notebooks_classement_EDT/: discrimination.ipynb
optimization/: main.py  merge_solutions.py
optimization/entities/: employee.py  job.py  problem_data.py
optimization/solutions/: medium.json  small.json
projet/: main.py
projet/entities/: problem_data.py
solutions/large/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  4.json  5.json  6.json  7.json  8.json  9.json  solutions.json
solutions/medium/: 1.json  10.json  2.json  22.json  3.json  4.json  5.json  6.json  7.json  solutions.json
solutions/small/: 1.json  2.json  3.json  5.json
