[tool.poetry]
name = "optimization"
version = "0.1.0"
description = ""
authors = ["Yoan Gabison <yoan.gabison@student-cs.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gurobipy = "^10.0.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compu_opti = "optimization.main:main"
merge_solutions = "optimization.merge_solutions:main"